# odas-project

./: .editorconfig  .gitignore  Makefile  README.md  docker-compose.yml  generate-cert.sh  nginx.conf
backend/: .gitignore  Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/api/: __init__.py
backend/app/api/routes/: __init__.py  info.py
backend/app/api/v1/: __init__.py
backend/app/api/v1/routes/: __init__.py  auth.py  info.py  messages.py
backend/app/core/: config.py  db.py  logger.py  rate_limiter.py  security.py  security_utils.py  sessions.py
backend/app/models/: __init__.py  attachment.py  message.py  user.py
backend/app/schemas/: auth.py  messages.py  two_factor.py
backend/app/utils/: auth.py  two_factor.py
frontend/: Dockerfile  next.config.ts  package-lock.json  package.json
frontend/src/app/: ClientLayout.tsx  globals.css  layout.tsx  not-found.tsx
frontend/src/app/(auth)/: layout.tsx
frontend/src/app/(auth)/login/: page.tsx
frontend/src/app/(auth)/signup/: page.tsx
frontend/src/app/inbox/: page.tsx
frontend/src/app/sent/: page.tsx
frontend/src/components/: ComposeMessage.tsx  ErrorBoundary.tsx  MessageSuccessScreen.tsx  MessageViewer.tsx  PasswordStrengthIndicator.tsx  TwoFactorPrompt.tsx  TwoFactorSetup.tsx
frontend/src/context/: CryptoContext.tsx  UserContext.tsx
frontend/src/lib/: crypto.ts  display.ts  security.ts  toast-config.ts
